working on flickr image search

--- a/src/app/components/widget/widget-list/widget-list.component.html
+++ b/src/app/components/widget/widget-list/widget-list.component.html
@@ -84,7 +84,7 @@
             </button>
             <span class="glyphicon glyphicon-menu-hamburger"></span>
           </div>
-          <button class="jj-button-cog">{{widget.text}}</button>
+          {{widget.text}}
         </div>
       </div>
       <div *ngSwitchCase="'TEXT'">
