--- a/src/app/components/widget/widget-edit/widget-image/widget-image.component.html
+++ b/src/app/components/widget/widget-edit/widget-image/widget-image.component.html
@@ -68,9 +68,10 @@
       <input  name="websiteId" value="{{webId}}"   style="display: none"/>
       <input  name="pageId" value="{{pageId}}"   style="display: none"/>
       <input  name="userId" value="{{userId}}"   style="display: none"/>
-      <button (click)="commit(width, url)" type="submit" class="btn btn-block btn-primary jj-form jj-button-hover" aria-pressed="true">Upload Image</button>
+      <button (click)="commit(width, url)" type="submit" class="btn btn-block btn-primary jj-button-hover" aria-pressed="true">Upload Image</button>
       <br/>
     </form>
+    <button  (click)="flickrSearch()" class="btn btn-info btn-block jj-button-hover jj-padding jj-center" aria-pressed="true">Search</button>
     <button (click)="deleted(wgid)" class="btn btn-danger btn-block jj-button-hover jj-form jj-center" aria-pressed="true">Delete</button>
   </div>
 </div>
