--- a/src/app/components/widget/widget-edit/widget-image/flickr-image-search/flickr-image-search.component.html
+++ b/src/app/components/widget/widget-edit/widget-image/flickr-image-search/flickr-image-search.component.html
@@ -1,20 +1,23 @@
 <div class="container-fluid jj-top-padding">
-      <div class="input-group">
-        <input [(ngModel)]="searchText" type="text" class="form-control" placeholder="Search Images"/>
-        <span class="input-group-btn">
-        <button class="btn btn-default  jj-button-hover" type="submit">
-          <span (click)="searchPhotos()" class="glyphicon glyphicon-search"></span>
+
+  <div class="input-group">
+    <input [(ngModel)]="searchText" name="searchText" id="searchText" type="text" class="form-control"
+           placeholder="Search Images"/>
+    <span class="input-group-btn">
+        <button (click)="searchPhotos()" class="btn btn-default  jj-button-hover" type="submit">
+          <span class="glyphicon glyphicon-search"></span>
         </button>
       </span>
-      </div>
+  </div>
+
 </div>
 
 <div class="row">
-  <div *ngFor = "let pic of photos['photo']"
+  <div *ngFor="let pic of photos['photo']"
        class="col-xs-4">
-    <img    (click)="selectPhoto(pic)"
-            width="100%"
-            [src] = "['https://farm' + pic.farm + '.staticflickr.com/' + pic.server + '/' +   pic.id + '_' + pic.secret + '_s.jpg']"/>
+    <img (click)="selectPhoto(pic)"
+         width="100%"
+         [src]="['https://farm' + pic.farm + '.staticflickr.com/' + pic.server + '/' +   pic.id + '_' + pic.secret + '_s.jpg']"/>
 
     <p></p>
   </div>
