--- a/src/app/components/widget/widget-edit/widget-image/widget-image.component.html
+++ b/src/app/components/widget/widget-edit/widget-image/widget-image.component.html
@@ -72,7 +72,7 @@
       <br/>
     </form>
     <button  (click)="flickrSearch()" class="btn btn-info btn-block jj-button-hover jj-padding jj-center" aria-pressed="true">Search</button>
-    <button (click)="deleted(wgid)" class="btn btn-danger btn-block jj-button-hover jj-form jj-center" aria-pressed="true">Delete</button>
+    <button (click)="deleted(wgid)" class="btn btn-danger btn-block jj-button-hover jj-padding jj-center" aria-pressed="true">Delete</button>
   </div>
 </div>
 <nav class="navbar navbar-default navbar-fixed-bottom">
