--- a/src/app/components/user/register/register.component.html
+++ b/src/app/components/user/register/register.component.html
@@ -7,7 +7,7 @@
   </div>
 
   <h1>Register</h1>
-  <form (ngSubmit)="register(username.value, password.value, email.value, firstName.value, lastName.value)" #f="ngForm">
+  <form (ngSubmit)="register(username.value, password.value, email.value, firstName.value, lastName.value, phone.value)" #f="ngForm">
     <input name="username"
            id="username"
            type="text"
@@ -86,8 +86,21 @@
       Please enter last name!
     </span>
 
+    <input name="phone"
+           id="phone"
+           type="tel"
+           placeholder="xxx-xxx-xxxx"
+           class="form-control"
+           ngModel
+           required
+           #phone="ngModel"/>
+
+    <span class="help-block" *ngIf="!phone.valid && phone.touched">
+      Please enter phone number!
+    </span>
+
   </form>
-  <button (click)="registered(username.value, password.value, firstName.value, lastName.value, email.value)"
+  <button (click)="registered(username.value, password.value, firstName.value, lastName.value, email.value, phone.value)"
           class="btn btn-primary btn-block jj-button-hover"
           type="submit"
           aria-pressed="true"
