--- a/src/app/components/widget/widget-list/widget-list.component.html
+++ b/src/app/components/widget/widget-list/widget-list.component.html
@@ -84,7 +84,7 @@
             </button>
             <span class="glyphicon glyphicon-menu-hamburger"></span>
           </div>
-          {{widget.text}}
+          <div [innerHTML]="widget.text"></div>
         </div>
       </div>
       <div *ngSwitchCase="'TEXT'">
