--- a/src/app/components/user/login/login.component.html
+++ b/src/app/components/user/login/login.component.html
@@ -38,6 +38,10 @@
             [disabled]="!f.valid">
       Login
     </button>
+    <button href="/facebook/login" class="btn btn-primary btn-block">
+      <span class="fa fa-facebook"></span>
+      FaceBook
+    </button>
     <button class="btn btn-success btn-block jj-button-hover"
             aria-pressed="true"
             [routerLink]="['/register']">
