--- a/src/app/components/user/login/login.component.html
+++ b/src/app/components/user/login/login.component.html
@@ -38,7 +38,7 @@
             [disabled]="!f.valid">
       Login
     </button>
-    <a href="{{baseURL}}/facebook/login" class="btn btn-primary btn-block jj-button-hover">
+    <a href="{{baseURL}}/api/facebook/login" class="btn btn-primary btn-block jj-button-hover">
       <span class="fa fa-facebook"></span>
       Facebook
     </a>
